@@ -1,3 +1,7 @@
+2008-08-22  Badlop  <badlop@process-one.net>
+
+	* src/ejabberd_router.erl: Fix call to mnesia match_object
+
 2008-08-21  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: Fix names of chatroom to room, user to occupant
